Fix z-index issues between form and other components

--- a/app/components/main/main.component.css
+++ b/app/components/main/main.component.css
@@ -22,7 +22,7 @@ md-content {
 
 md-toolbar {
   position: relative;
-  z-index: 2;
+  z-index: 4;
 }
 
 .md-toolbar-tools {
@@ -41,7 +41,7 @@ md-toolbar {
   width: 100%;
 
   transition: all ease-out 0.7s;
-  z-index: 1;
+  z-index: 3;
 }
 .form-container.enabled {
   top: 60px;
